--- a/languages/SoftwareComponentLanguage.sandbox/source_gen/SoftwareComponentLanguage/sandbox/SoftwareComponentLanguage.sandbox.all.props
+++ b/languages/SoftwareComponentLanguage.sandbox/source_gen/SoftwareComponentLanguage/sandbox/SoftwareComponentLanguage.sandbox.all.props
@@ -1,7 +1,11 @@
 <Project>  
   <ItemGroup>    
-    <Compile Include="$(MSBuildThisFileDirectory)ProductStock.cs" />
-    <Compile Include="$(MSBuildThisFileDirectory)OrderInfo.cs" />
+    <Compile Include="$(MSBuildThisFileDirectory)Testing/AssertEqual.cs" />
+    <Compile Include="$(MSBuildThisFileDirectory)Testing/AssertEqualWithMessage.cs" />
+    <Compile Include="$(MSBuildThisFileDirectory)Testing/AssertTrue.cs" />
+    <Compile Include="$(MSBuildThisFileDirectory)Testing/AssertTrueWithMessage.cs" />
+    <Compile Include="$(MSBuildThisFileDirectory)Testing/AssertFalse.cs" />
+    <Compile Include="$(MSBuildThisFileDirectory)Testing/AssertFalseWithMessage.cs" />
     <Compile Include="$(MSBuildThisFileDirectory)MyPackage/NumberComponent.cs" />
     <Compile Include="$(MSBuildThisFileDirectory)MyPackage/RandomProvider.cs" />
     <Compile Include="$(MSBuildThisFileDirectory)Order/ShoppingCart.cs" />
@@ -16,5 +20,7 @@
     <Compile Include="$(MSBuildThisFileDirectory)Order/IOrderManagementInterface.cs" />
     <Compile Include="$(MSBuildThisFileDirectory)Order/IInventoryInterface.cs" />
     <Compile Include="$(MSBuildThisFileDirectory)Webstore_ComponentTest.cs" />
+    <Compile Include="$(MSBuildThisFileDirectory)ProductStock.cs" />
+    <Compile Include="$(MSBuildThisFileDirectory)OrderInfo.cs" />
   </ItemGroup>
 </Project>
